vresk logo, fixed broken layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,7 @@ a {
   justify-content: space-evenly;
   align-items: center;
   min-height: 100vh;
+  min-width: 100vw;
   position: absolute;
 }
 
